--- a/environment.yml
+++ b/environment.yml
@@ -1,342 +1,108 @@
-name: mimic
+name: test_env
 channels:
-  - anaconda
-  - pytorch
-  - bioconda
-  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
+  - _libgcc_mutex=0.1=main
+  - _openmp_mutex=5.1=1_gnu
   - _py-xgboost-mutex=2.0=cpu_0
-  - _r-mutex=1.0.0=anacondar_1
-  - aiofiles=22.1.0=py311h06a4308_0
-  - aiosqlite=0.18.0=py311h06a4308_0
-  - alembic=1.8.1=py311h06a4308_0
-  - alsa-lib=1.2.8=h166bdaf_0
-  - anyio=3.5.0=py311h06a4308_0
-  - appdirs=1.4.4=pyhd3eb1b0_0
-  - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py311h5eee18b_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - attr=2.5.1=h166bdaf_1
-  - attrs=22.1.0=py311h06a4308_0
-  - babel=2.11.0=py311h06a4308_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.12.2=py311h06a4308_0
-  - binutils_impl_linux-64=2.38=h2a08ee3_1
   - blas=1.0=mkl
-  - bleach=4.1.0=pyhd3eb1b0_0
-  - boost=1.78.0=py311h59ea3da_4
-  - boost-cpp=1.78.0=h5adbc97_2
-  - bottleneck=1.3.5=py311hbed6279_0
-  - brotli=1.0.9=h5eee18b_7
-  - brotli-bin=1.0.9=h5eee18b_7
-  - brotlipy=0.7.0=py311h5eee18b_1002
-  - bwidget=1.9.11=1
-  - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.19.0=h5eee18b_0
-  - ca-certificates=2024.3.11=h06a4308_0
-  - cairo=1.16.0=ha61ee94_1014
-  - certifi=2024.2.2=py311h06a4308_0
-  - cffi=1.15.1=py311h5eee18b_3
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - cloudpickle=2.2.1=py311h06a4308_0
-  - cmaes=0.9.1=py311h06a4308_0
-  - colorlog=5.0.1=py311h06a4308_1
-  - comm=0.1.2=py311h06a4308_0
-  - contourpy=1.0.5=py311hdb19cb5_0
-  - cryptography=39.0.1=py311h9ce1e76_2
-  - curl=7.88.1=h5eee18b_1
+  - bottleneck=1.3.7=py311hf4808d0_0
+  - brotli=1.0.9=h5eee18b_8
+  - brotli-bin=1.0.9=h5eee18b_8
+  - bzip2=1.0.8=h5eee18b_6
+  - ca-certificates=2024.9.24=h06a4308_0
+  - contourpy=1.2.0=py311hdb19cb5_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - cyrus-sasl=2.1.28=h52b45da_1
   - dbus=1.13.18=hb2f20db_0
-  - debugpy=1.5.1=py311h6a678d5_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - entrypoints=0.4=py311h06a4308_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.5.0=hcb278e6_1
-  - fftw=3.3.10=nompi_hf0379b8_106
-  - filelock=3.13.1=py311h06a4308_0
-  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-  - font-ttf-inconsolata=2.001=hcb22688_0
-  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
-  - font-ttf-ubuntu=0.83=h8b1ccd4_0
-  - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-anaconda=1=h8fa9717_0
-  - fonts-conda-ecosystem=1=hd3eb1b0_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
+  - expat=2.6.3=h6a678d5_0
+  - fontconfig=2.14.1=h55d465d_3
+  - fonttools=4.51.0=py311h5eee18b_0
   - freetype=2.12.1=h4a9f257_0
-  - fribidi=1.0.10=h7b6447c_0
-  - gcc_impl_linux-64=12.1.0=hea43390_17
-  - gettext=0.21.1=h27087fc_0
-  - gfortran_impl_linux-64=12.1.0=h1db8e46_17
-  - giflib=5.2.1=h5eee18b_3
-  - glib=2.76.3=hfc55251_0
-  - glib-tools=2.76.3=hfc55251_0
-  - gmp=6.2.1=h295c915_3
-  - gmpy2=2.1.2=py311hc9b5ff0_0
-  - graphite2=1.3.14=h295c915_1
-  - greenlet=2.0.1=py311h6a678d5_0
-  - gsl=2.7.1=h6e86dc7_1
-  - gst-plugins-base=1.22.0=h4243ec0_2
-  - gstreamer=1.22.0=h25f0c4b_2
-  - gstreamer-orc=0.4.34=hd590300_0
-  - gxx_impl_linux-64=12.1.0=hea43390_17
-  - harfbuzz=6.0.0=h8e241bc_0
-  - icu=70.1=h27087fc_0
-  - idna=3.4=py311h06a4308_0
-  - intel-openmp=2023.1.0=hdb19cb5_46305
-  - ipykernel=6.19.2=py311h6410fe4_0
-  - ipython=8.12.0=py311h06a4308_0
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - ipywidgets=8.0.4=py311h06a4308_0
-  - jack=1.9.22=h11f4161_0
-  - jedi=0.18.1=py311h06a4308_1
-  - jinja2=3.1.2=py311h06a4308_0
-  - joblib=1.2.0=py311h06a4308_0
-  - jpeg=9e=h5eee18b_1
-  - json5=0.9.6=pyhd3eb1b0_0
-  - jsonschema=4.17.3=py311h06a4308_0
-  - jupyter=1.0.0=py311h06a4308_8
-  - jupyter_client=7.4.9=py311h06a4308_0
-  - jupyter_console=6.6.3=py311h06a4308_0
-  - jupyter_core=5.3.0=py311h06a4308_0
-  - jupyter_events=0.6.3=py311h06a4308_0
-  - jupyter_server=1.23.4=py311h06a4308_0
-  - jupyter_server_fileid=0.9.0=py311h06a4308_0
-  - jupyter_server_terminals=0.4.4=py311h06a4308_1
-  - jupyter_server_ydoc=0.8.0=py311h06a4308_1
-  - jupyter_ydoc=0.2.4=py311h06a4308_0
-  - jupyterlab=3.6.3=py311h06a4308_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.22.0=py311h06a4308_0
-  - jupyterlab_widgets=3.0.5=py311h06a4308_0
-  - kernel-headers_linux-64=2.6.32=he073ed8_15
+  - glib=2.78.4=h6a678d5_0
+  - glib-tools=2.78.4=h6a678d5_0
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - icu=73.1=h6a678d5_0
+  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - joblib=1.4.2=py311h06a4308_0
+  - jpeg=9e=h5eee18b_3
   - kiwisolver=1.4.4=py311h6a678d5_0
   - krb5=1.20.1=h143b758_1
-  - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
+  - ld_impl_linux-64=2.40=h12ee557_0
   - lerc=3.0=h295c915_0
-  - libblas=3.9.0=1_h86c2bf4_netlib
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
-  - libcap=2.67=he9d0100_0
-  - libclang=15.0.7=default_h7634d5b_2
-  - libclang13=15.0.7=default_h9986a30_2
-  - libcups=2.3.3=h36d4200_3
-  - libcurl=7.88.1=h251f7ec_1
-  - libdb=6.2.32=h6a678d5_1
-  - libdeflate=1.17=h5eee18b_0
-  - libedit=3.1.20221030=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libevent=2.1.10=h28343ad_4
-  - libexpat=2.5.0=hcb278e6_1
-  - libffi=3.4.4=h6a678d5_0
-  - libflac=1.4.2=h27087fc_0
-  - libgcc-devel_linux-64=12.1.0=h1ec3361_17
-  - libgcc-ng=13.1.0=he5830b7_0
-  - libgcrypt=1.10.1=h166bdaf_0
-  - libgfortran-ng=13.1.0=h69a702a_0
-  - libgfortran5=13.1.0=h15d22d2_0
-  - libglib=2.76.3=hebfc3b9_0
-  - libgomp=13.1.0=he5830b7_0
-  - libgpg-error=1.46=h620e276_0
-  - libiconv=1.17=h166bdaf_0
-  - liblapack=3.9.0=5_h92ddd45_netlib
-  - libllvm14=14.0.6=hdb19cb5_3
-  - libllvm15=15.0.7=hadd5161_1
-  - libnghttp2=1.52.0=h2d74bed_1
-  - libnsl=2.0.0=h5eee18b_0
-  - libogg=1.3.5=h27cfd23_1
-  - libopus=1.3.1=h7b6447c_0
+  - libbrotlicommon=1.0.9=h5eee18b_8
+  - libbrotlidec=1.0.9=h5eee18b_8
+  - libbrotlienc=1.0.9=h5eee18b_8
+  - libclang=14.0.6=default_hc6dbbc7_1
+  - libclang13=14.0.6=default_he11475f_1
+  - libcups=2.4.2=h2d74bed_1
+  - libdeflate=1.17=h5eee18b_1
+  - libedit=3.1.20230828=h5eee18b_0
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=11.2.0=h00389a5_1
+  - libgfortran5=11.2.0=h1234567_1
+  - libglib=2.78.4=hdc74915_0
+  - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h5eee18b_3
+  - libllvm14=14.0.6=hecde1de_4
   - libpng=1.6.39=h5eee18b_0
-  - libpq=15.3=hbcd7760_1
-  - libsanitizer=12.1.0=ha89aaad_17
-  - libsndfile=1.2.0=hb75c966_0
-  - libsodium=1.0.18=h7b6447c_0
-  - libsqlite=3.42.0=h2797004_0
-  - libssh2=1.10.0=hdbd6064_2
-  - libstdcxx-devel_linux-64=12.1.0=h1ec3361_17
-  - libstdcxx-ng=13.1.0=hfd8a6a1_0
-  - libsystemd0=253=h8c4010b_1
-  - libtiff=4.5.0=h6a678d5_2
-  - libtool=2.4.7=h27087fc_0
-  - libudev1=253=h0b41bf4_1
-  - libuuid=2.38.1=h0b41bf4_0
-  - libvorbis=1.3.7=h7b6447c_0
-  - libwebp=1.2.4=h11a3e52_1
-  - libwebp-base=1.2.4=h5eee18b_1
-  - libxcb=1.13=h1bed415_1
-  - libxgboost=1.7.3=h6a678d5_0
-  - libxkbcommon=1.5.0=h79f4944_1
-  - libxml2=2.10.3=hca2bb57_4
-  - libxslt=1.1.37=h873f0b0_0
-  - libzlib=1.2.13=h166bdaf_4
-  - llvm-openmp=14.0.6=h9e868ea_0
-  - llvmlite=0.40.0=py311he621ea3_0
-  - lxml=4.9.2=py311h5eee18b_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - make=4.2.1=h1bed415_1
-  - mako=1.2.3=py311h06a4308_0
-  - markupsafe=2.1.1=py311h5eee18b_0
-  - matplotlib=3.7.1=py311h38be061_0
-  - matplotlib-base=3.7.1=py311ha02d727_1
-  - matplotlib-inline=0.1.6=py311h06a4308_0
-  - matplotlib-venn=0.11.10=pyhd8ed1ab_0
-  - mistune=0.8.4=py311h5eee18b_1000
-  - mkl=2023.1.0=h6d00ec8_46342
+  - libpq=12.17=hdbd6064_0
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - libtiff=4.5.1=h6a678d5_0
+  - libuuid=1.41.5=h5eee18b_0
+  - libwebp-base=1.3.2=h5eee18b_1
+  - libxcb=1.15=h7f8727e_0
+  - libxgboost=2.1.1=h6a678d5_0
+  - libxkbcommon=1.0.1=h097e994_2
+  - libxml2=2.13.1=hfdd30dd_2
+  - lz4-c=1.9.4=h6a678d5_1
+  - matplotlib=3.9.2=py311h06a4308_0
+  - matplotlib-base=3.9.2=py311h6fb44e5_0
+  - mkl=2023.1.0=h213fc3f_46344
   - mkl-service=2.4.0=py311h5eee18b_1
-  - mkl_fft=1.3.6=py311ha02d727_1
-  - mkl_random=1.2.2=py311ha02d727_1
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mpg123=1.31.3=hcb278e6_0
-  - mpmath=1.3.0=py311h06a4308_0
-  - munkres=1.1.4=py_0
-  - mysql-common=8.0.32=hf1915f5_2
-  - mysql-libs=8.0.32=hca2cd23_2
-  - nbclassic=0.5.5=py311h06a4308_0
-  - nbclient=0.5.13=py311h06a4308_0
-  - nbconvert=6.5.4=py311h06a4308_0
-  - nbformat=5.7.0=py311h06a4308_0
+  - mkl_fft=1.3.10=py311h5eee18b_0
+  - mkl_random=1.2.7=py311ha02d727_0
+  - mysql=5.7.24=h721c034_2
   - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.5.6=py311h06a4308_0
-  - networkx=3.1=py311h06a4308_0
-  - notebook=6.5.4=py311h06a4308_0
-  - notebook-shim=0.2.2=py311h06a4308_0
-  - nspr=4.35=h6a678d5_0
-  - nss=3.89.1=h6a678d5_0
-  - numba=0.57.0=py311h96b013e_0
-  - numexpr=2.8.4=py311h65dcdc2_1
-  - numpy=1.24.3=py311h08b1b3b_1
-  - numpy-base=1.24.3=py311hf175353_1
-  - openssl=3.2.1=hd590300_1
-  - optuna=3.1.1=pyhd8ed1ab_0
-  - packaging=23.0=py311h06a4308_0
-  - pandas=1.5.3=py311hba01205_0
-  - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - pango=1.50.14=hd33c08f_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pcre2=10.40=hc3806b6_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=9.4.0=py311h6a678d5_0
-  - pip=23.1.2=py311h06a4308_0
-  - pixman=0.40.0=h7f8727e_1
-  - platformdirs=2.5.2=py311h06a4308_0
+  - numexpr=2.10.1=py311h3c60e43_0
+  - numpy=1.26.4=py311h08b1b3b_0
+  - numpy-base=1.26.4=py311hf175353_0
+  - openjpeg=2.5.2=he7f1fd0_0
+  - openssl=3.0.15=h5eee18b_0
+  - packaging=24.1=py311h06a4308_0
+  - pandas=2.2.2=py311ha02d727_0
+  - pcre2=10.42=hebb0a14_1
+  - pillow=10.4.0=py311h5eee18b_0
+  - pip=24.2=py311h06a4308_0
   - ply=3.11=py311h06a4308_0
-  - pooch=1.4.0=pyhd3eb1b0_0
-  - prometheus_client=0.14.1=py311h06a4308_0
-  - prompt-toolkit=3.0.36=py311h06a4308_0
-  - prompt_toolkit=3.0.36=hd3eb1b0_0
-  - psutil=5.9.0=py311h5eee18b_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pubchempy=1.0.4=pyh864c0ab_2
-  - pulseaudio=16.1=hcb278e6_3
-  - pulseaudio-client=16.1=h5195f5e_3
-  - pulseaudio-daemon=16.1=ha8d29e2_3
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - py-xgboost=1.7.3=py311h06a4308_0
-  - pycairo=1.23.0=py311hd1222b9_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=py311h06a4308_1
-  - pyopenssl=23.0.0=py311h06a4308_0
-  - pyparsing=3.0.9=py311h06a4308_0
-  - pyqt=5.15.7=py311ha74522f_3
-  - pyqt5-sip=12.11.0=py311hcafe171_3
-  - pyrsistent=0.18.0=py311h5eee18b_0
-  - pysocks=1.7.1=py311h06a4308_0
-  - python=3.11.3=h2755cc3_0_cpython
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-fastjsonschema=2.16.2=py311h06a4308_0
-  - python-json-logger=2.0.7=py311h06a4308_0
-  - python_abi=3.11=2_cp311
-  - pytorch=2.2.0=py3.11_cpu_0
-  - pytorch-mutex=1.0=cpu
-  - pytz=2022.7=py311h06a4308_0
-  - pyyaml=6.0=py311h5eee18b_1
-  - pyzmq=23.2.0=py311h6a678d5_0
-  - qt-main=5.15.8=h5d23da1_6
-  - qtconsole=5.4.2=py311h06a4308_0
-  - qtpy=2.2.0=py311h06a4308_0
-  - r-base=4.2.3=ha7d60f8_0
-  - rdkit=2023.03.1=py311hc21844d_0
+  - py-xgboost=2.1.1=py311h06a4308_0
+  - pyparsing=3.1.2=py311h06a4308_0
+  - pyqt=5.15.10=py311h6a678d5_0
+  - pyqt5-sip=12.13.0=py311h5eee18b_0
+  - python=3.11.10=he870216_0
+  - python-dateutil=2.9.0post0=py311h06a4308_2
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - pytz=2024.1=py311h06a4308_0
+  - qt-main=5.15.2=h53bd1ea_10
   - readline=8.2=h5eee18b_0
-  - reportlab=3.6.13=py311hdc8528d_0
-  - requests=2.29.0=py311h06a4308_0
-  - rfc3339-validator=0.1.4=py311h06a4308_0
-  - rfc3986-validator=0.1.1=py311h06a4308_0
-  - rpy2=3.5.11=py311r42hcb2cf0a_0
-  - scikit-learn=1.2.2=py311h6a678d5_1
-  - scipy=1.10.1=py311h08b1b3b_1
-  - seaborn=0.11.2=pyhd3eb1b0_0
-  - sed=4.8=h7b6447c_0
-  - send2trash=1.8.0=pyhd3eb1b0_1
-  - setuptools=67.8.0=py311h06a4308_0
-  - shap=0.41.0=py311ha02d727_1
-  - simplegeneric=0.8.1=py311h06a4308_2
-  - sip=6.7.9=py311hb755f60_0
+  - scikit-learn=1.5.1=py311ha02d727_0
+  - scipy=1.12.0=py311h08b1b3b_0
+  - setuptools=75.1.0=py311h06a4308_0
+  - sip=6.7.12=py311h6a678d5_0
   - six=1.16.0=pyhd3eb1b0_1
-  - slicer=0.0.7=pyhd3eb1b0_0
-  - sniffio=1.2.0=py311h06a4308_1
-  - soupsieve=2.4=py311h06a4308_0
-  - sqlalchemy=1.4.39=py311h5eee18b_0
-  - sqlite=3.41.2=h5eee18b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - sympy=1.12=py311h06a4308_0
-  - sysroot_linux-64=2.12=he073ed8_15
+  - sqlite=3.45.3=h5eee18b_0
   - tbb=2021.8.0=hdb19cb5_0
-  - terminado=0.17.1=py311h06a4308_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tinycss2=1.2.1=py311h06a4308_0
-  - tk=8.6.12=h1ccaba5_0
-  - tktable=2.10=h14c3975_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - tomli=2.0.1=py311h06a4308_0
-  - tornado=6.2=py311h5eee18b_0
-  - tqdm=4.65.0=py311h92b7b1e_0
-  - traitlets=5.7.1=py311h06a4308_0
-  - tzdata=2023c=h04d1e81_0
-  - tzlocal=2.1=py311h06a4308_1
-  - urllib3=1.26.16=py311h06a4308_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py311h06a4308_1
-  - websocket-client=0.58.0=py311h06a4308_4
-  - wheel=0.38.4=py311h06a4308_0
-  - widgetsnbextension=4.0.5=py311h06a4308_0
-  - xcb-util=0.4.0=h166bdaf_0
-  - xcb-util-image=0.4.0=h166bdaf_0
-  - xcb-util-keysyms=0.4.0=h166bdaf_0
-  - xcb-util-renderutil=0.3.9=h166bdaf_0
-  - xcb-util-wm=0.4.1=h166bdaf_0
-  - xgboost=1.7.3=py311h06a4308_0
-  - xkeyboard-config=2.38=h0b41bf4_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
-  - xorg-libx11=1.8.4=h0b41bf4_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-libxt=1.3.0=hd590300_0
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xproto=7.0.31=h27cfd23_1007
-  - xz=5.4.2=h5eee18b_0
-  - y-py=0.5.9=py311h52d8a92_0
-  - yaml=0.2.5=h7b6447c_0
-  - ypy-websocket=0.8.2=py311h06a4308_0
-  - zeromq=4.3.4=h2531618_0
-  - zlib=1.2.13=h166bdaf_4
-  - zstd=1.5.5=hc292b87_0
-  - pip:
-      - conorm==1.2.0
-      - fsspec==2024.2.0
-      - icd10-cm==0.0.5
-      - pynndescent==0.5.11
-      - pytorch-tabnet==4.1.0
-      - typing-extensions==4.9.0
-      - umap-learn==0.5.5
-prefix: /data/user_home/jhjeon/anaconda3/envs/mimic
+  - threadpoolctl=3.5.0=py311h92b7b1e_0
+  - tk=8.6.14=h39e8969_0
+  - tornado=6.4.1=py311h5eee18b_0
+  - tzdata=2024b=h04d1e81_0
+  - unicodedata2=15.1.0=py311h5eee18b_0
+  - wheel=0.44.0=py311h06a4308_0
+  - xgboost=2.1.1=py311h06a4308_0
+  - xz=5.4.6=h5eee18b_1
+  - zlib=1.2.13=h5eee18b_1
+  - zstd=1.5.6=hc292b87_0
+prefix: /data/user_home/jhjeon/anaconda3/envs/test_env
